istio/nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
spec:
  replicas: 1  # 设置副本数量
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:latest  # nginx 镜像
        ports:
        - containerPort: 80  # 容器监听的端口
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  selector:
    app: nginx
  externalIPs:
  - 172.0.3.65
  ports:
    - protocol: TCP
      port: 8087  # Service 暴露的端口
      targetPort: 80  # 路由到容器的端口
  type: ClusterIP  # 设置为 LoadBalancer 类型，可以通过外部 IP 访问
