istio/server.yaml
apiVersion: v1
kind: Service
metadata:
  name: server
  labels:
    app: server
spec:
  ports:
  - name: grpc-web
    port: 9000
    protocol: TCP
    targetPort: 9000
  selector:
    app: server
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server
  labels:
    app: server
    version: v1
spec:
  selector:
    matchLabels:
      app: server
  replicas: 2
  template:
    metadata:
      labels:
        app: server
        version: v1
    spec:
      containers:
      - name: server
        image: grpc-server:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 9000
        resources:
          limits:
            cpu: "3"
            memory: 1Gi
          requests:
            cpu: "3"
            memory: 1Gi
